--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -16,6 +16,6 @@ collections:
           preview: false
       fields:
           - { label: "Title", name: "title", widget: "string" }
+          - { label: "Featured Image", name: "thumbnail", widget: "image" }
           - { label: "Publish Date", name: "date", widget: "datetime" }
-          - { label: "Description", name: "description", widget: "string" }
           - { label: "Body", name: "body", widget: "markdown" }
