--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -13,9 +13,21 @@ collections:
       create: true
       slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
       editor:
-          preview: false
+          preview: true
       fields:
           - { label: "Title", name: "title", widget: "string" }
           - { label: "Featured Image", name: "thumbnail", widget: "image" }
-          - { label: "Publish Date", name: "date", widget: "datetime" }
+          - {
+                label: "Publish Date",
+                name: "date",
+                widget: "datetime",
+                dateFormat: "DD.MM.YYYY",
+            }
           - { label: "Body", name: "body", widget: "markdown" }
+    - name: "socialIcons"
+      label: "Social Icons"
+      format: "json"
+      folder: "assets/content/socialIcons"
+      fields:
+          - { label: "Link", name: "link", widget: "string" }
+          - { label: "Icon", name: "image", widget: "image" }
