--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -11,7 +11,7 @@ collections:
       format: "json"
       folder: "assets/content/blog"
       create: true
-      slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+      slug: "{{slug}}"
       editor:
           preview: true
       fields:
@@ -24,10 +24,41 @@ collections:
                 dateFormat: "DD.MM.YYYY",
             }
           - { label: "Body", name: "body", widget: "markdown" }
+
     - name: "socialIcons"
       label: "Social Icons"
       format: "json"
+      create: true
       folder: "assets/content/socialIcons"
       fields:
           - { label: "Link", name: "link", widget: "string" }
           - { label: "Icon", name: "image", widget: "image" }
+
+    - name: "pages"
+      label: "Pages"
+      files:
+          - label: "About Page"
+            name: "about"
+            file: "site/content/about.yml"
+            fields:
+                - { label: Title, name: title, widget: string }
+                - { label: Intro, name: intro, widget: markdown }
+                - label: Team
+                  name: team
+                  widget: list
+                  fields:
+                      - { label: Name, name: name, widget: string }
+                      - { label: Position, name: position, widget: string }
+                      - { label: Photo, name: photo, widget: image }
+          - label: "Locations Page"
+            name: "locations"
+            file: "site/content/locations.yml"
+            fields:
+                - { label: Title, name: title, widget: string }
+                - { label: Intro, name: intro, widget: markdown }
+                - label: Locations
+                  name: locations
+                  widget: list
+                  fields:
+                      - { label: Name, name: name, widget: string }
+                      - { label: Address, name: address, widget: string }
