--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -37,22 +37,9 @@ collections:
     - name: "pages"
       label: "Pages"
       files:
-          - label: "About Page"
-            name: "about"
-            file: "site/content/about.yml"
-            fields:
-                - { label: Title, name: title, widget: string }
-                - { label: Intro, name: intro, widget: markdown }
-                - label: Team
-                  name: team
-                  widget: list
-                  fields:
-                      - { label: Name, name: name, widget: string }
-                      - { label: Position, name: position, widget: string }
-                      - { label: Photo, name: photo, widget: image }
           - label: "Locations Page"
             name: "locations"
-            file: "site/content/locations.yml"
+            file: "pages/locations.vue"
             fields:
                 - { label: Title, name: title, widget: string }
                 - { label: Intro, name: intro, widget: markdown }
