--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -17,7 +17,12 @@ collections:
     fields:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Featured Image", name: "thumbnail", widget: "image" }
-      - { label: "Publish Date", name: "date", widget: "datetime" }
+      - {
+          label: "Publish Date",
+          name: "date",
+          widget: "datetime",
+          format: "MMM Do YY",
+        }
       - { label: "Body", name: "body", widget: "markdown" }
   - name: "socialIcons"
     label: "Social Icons"
