--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.9.7",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
+    "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "nuxt": "^2.12.2",
     "stripe": "^8.38.0"
