--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "nuxt": "^2.12.2",
-    "stripe": "^8.38.0"
+    "stripe": "^8.38.0",
+    "uuid": "^7.0.3",
+    "vue-stripe-elements-plus": "^0.3.2"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^1.4.0",
