--- a/package.json
+++ b/package.json
@@ -11,19 +11,20 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.9.7",
+    "@nuxtjs/axios": "^5.10.3",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
+    "@sendgrid/mail": "^7.1.1",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "nuxt": "^2.12.2",
-    "stripe": "^8.38.0",
-    "uuid": "^7.0.3",
+    "stripe": "^8.53.0",
+    "uuid": "^8.1.0",
     "vue-stripe-elements-plus": "^0.3.2"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^1.4.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-prettier": "^3.1.2",
-    "prettier": "^2.0.2"
+    "@nuxtjs/tailwindcss": "^2.0.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "prettier": "^2.0.5"
   }
 }
