--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@sendgrid/mail": "^7.1.1",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
+    "mailgun-js": "^0.22.0",
     "nuxt": "^2.12.2",
     "stripe": "^8.53.0",
     "uuid": "^8.1.0",
